src/test/ui/tool-attributes/tool-attributes-misplaced-2.stderr
error: expected a macro, found tool attribute
  --> $DIR/tool-attributes-misplaced-2.rs:1:10
   |
LL | #[derive(rustfmt::skip)]
   |          ^^^^^^^^^^^^^

error: expected a macro, found tool attribute
  --> $DIR/tool-attributes-misplaced-2.rs:5:5
   |
LL |     rustfmt::skip!();
   |     ^^^^^^^^^^^^^

error: aborting due to 2 previous errors

