src/test/ui/tool-attributes/tool-attributes-misplaced-2.rs
#[derive(rustfmt::skip)] //~ ERROR expected derive macro, found tool attribute `rustfmt::skip`
struct S;

fn main() {
    rustfmt::skip!(); //~ ERROR expected macro, found tool attribute `rustfmt::skip`
}
